# toa

./: .gitattributes  .gitignore  Cargo.toml  README.md  TODO  networking-thoughts
src/: animation.rs  app.rs  cli.rs  command.rs  config.rs  damage.rs  input.rs  item.rs  main.rs  misc.rs  net.rs  packet.rs  sound.rs  team.rs  tilemap.rs  vec_compat.rs  view.rs
src/app/: connect.rs  event.rs  fuzz.rs  marker.rs  mod.rs  render.rs  run.rs  tick.rs
src/gameobject/: bag.rs  building.rs  item.rs  mod.rs  terrain.rs  unit.rs
src/graphics/: hue.rs  mod.rs
src/item/: club.rs  food.rs  iron.rs  iron_sword.rs  lance.rs  long_sword.rs  mod.rs  settlement_kit.rs  stone.rs  wood.rs  wood_bow.rs  wood_sword.rs
src/menu/: mod.rs  widget.rs
src/menu/design/: building.rs  hotkey.rs  item.rs  mod.rs  terrain.rs  unit.rs
src/player/: ai.rs  local.rs  mod.rs
src/player/local/: action_info.rs  mod.rs
src/server/: mod.rs  pool.rs  term.rs
src/vec/: direction.rs  mod.rs  pos.rs  vec2t.rs
src/view/: control.rs  default.rs  mod.rs
src/world/: aim.rs  buildingmap.rs  command_check.rs  command_exec.rs  itemmap.rs  mod.rs  terrainmap.rs  tilemap.rs  unitmap.rs
src/world/buildingmap/: camp.rs  (+12 more)
toaclient/: Cargo.toml
toaclient/src/: cli.rs  config.rs  font.rs  input.rs  main.rs  misc.rs  net.rs  render.rs  sound.rs  unit_mode.rs  vec_compat.rs  view.rs
toalib/: Cargo.toml
toalib/src/: command.rs  config.rs  input.rs  lib.rs  misc.rs  net.rs  packet.rs  team.rs  tilemap.rs  vec.rs
toaserver/: Cargo.toml
toaserver/src/: io.rs  main.rs  net.rs  pool.rs  term.rs
(+89 files in other folders)
