[package]
name = "toa"
version = "0.1.0"
authors = ["memoryleak47 <memoryleak47@protonmail.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["client"]
client = ["sfml"]

[dependencies]
sfml = { optional = true, version = "0.14" }
rand = "0.5"
lazy_static = "1.0"
serde = "1.0"
serde_derive = "1.0"
bincode = "1.0"

